; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/xen/xenfs/extr_xenbus.c_free_watch_adapter.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/xen/xenfs/extr_xenbus.c_free_watch_adapter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.watch_adapter = type { %struct.watch_adapter*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.watch_adapter* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.watch_adapter*)* @free_watch_adapter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_watch_adapter(%struct.watch_adapter* %0) #0 {
  %2 = alloca %struct.watch_adapter*, align 8
  store %struct.watch_adapter* %0, %struct.watch_adapter** %2, align 8
  %3 = load %struct.watch_adapter*, %struct.watch_adapter** %2, align 8
  %4 = getelementptr inbounds %struct.watch_adapter, %struct.watch_adapter* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load %struct.watch_adapter*, %struct.watch_adapter** %5, align 8
  %7 = call i32 @kfree(%struct.watch_adapter* %6)
  %8 = load %struct.watch_adapter*, %struct.watch_adapter** %2, align 8
  %9 = getelementptr inbounds %struct.watch_adapter, %struct.watch_adapter* %8, i32 0, i32 0
  %10 = load %struct.watch_adapter*, %struct.watch_adapter** %9, align 8
  %11 = call i32 @kfree(%struct.watch_adapter* %10)
  %12 = load %struct.watch_adapter*, %struct.watch_adapter** %2, align 8
  %13 = call i32 @kfree(%struct.watch_adapter* %12)
  ret void
}

declare dso_local i32 @kfree(%struct.watch_adapter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
